# villar-pso

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  build_container.sh  run_rustgp.sh  run_scaling_bench.sh  rustgp.def
cuda/: villar_joint.cu
metal/: villar_joint.metal
photometry/: ZTF17aabwtoe.csv  ZTF17aadklwt.csv  ZTF18aaacjvo.csv  ZTF18aaacqoh.csv  ZTF18aaaluzq.csv  ZTF18aabcdhb.csv  ZTF18aabszen.csv  ZTF18aabtumk.csv  ZTF18aacfknr.csv  ZTF18aachbjz.csv  ZTF18aafszot.csv  ZTF18aafxsmr.csv  ZTF18aafzers.csv  ZTF18aaiucce.csv  ZTF18aaiykoz.csv  ZTF18aajmmmo.csv  ZTF18aakalba.csv  ZTF18aakqtwt.csv  ZTF18aakqzem.csv  ZTF18aalpkec.csv  ZTF18aamfase.csv  ZTF18aamjqeh.csv  ZTF18aamndyk.csv  ZTF18aanbnwb.csv  ZTF18aankxqv.csv  ZTF18aaoeobb.csv  ZTF18aaphjyb.csv  ZTF18aaqgadq.csv  ZTF18aaqkfst.csv  ZTF18aaqlukq.csv  ZTF18aaqogeh.csv  ZTF18aaqzhib.csv  ZTF18aarcgha.csv  ZTF18aarlffl.csv  ZTF18aarnfbc.csv  ZTF18aarrqrn.csv  ZTF18aarunfu.csv  ZTF18aasufva.csv  ZTF18aatelfm.csv  ZTF18aauanao.csv  (+451 more)
photometry_long/: ZTF17aaadyoq.csv  ZTF17aaaedpn.csv  ZTF17aaaemzh.csv  ZTF17aaaeqnq.csv  ZTF17aaahyvt.csv  ZTF17aaahzsk.csv  ZTF17aaajnki.csv  ZTF17aaajnpg.csv  ZTF17aaaruaj.csv  ZTF17aaasklh.csv  ZTF17aaaslud.csv  ZTF17aaauijn.csv  ZTF17aaawzer.csv  ZTF17aabmxgh.csv  ZTF17aaborso.csv  ZTF17aabppgq.csv  ZTF17aabsswl.csv  ZTF17aabstpe.csv  ZTF17aabtyjo.csv  ZTF17aabufdp.csv  ZTF17aabukrc.csv  ZTF17aabulzy.csv  ZTF17aabuqoz.csv  ZTF17aabwcxm.csv  ZTF17aabwklb.csv  ZTF17aabwqhs.csv  ZTF17aabwrow.csv  ZTF17aabxhpg.csv  ZTF17aabxhvo.csv  ZTF17aacbuuj.csv  ZTF17aackjpm.csv  ZTF17aacklbl.csv  ZTF17aackpap.csv  ZTF17aacqgip.csv  ZTF17aacxvpg.csv  ZTF17aadqpbm.csv  ZTF18aaaclwy.csv  ZTF18aaacmsd.csv  ZTF18aaacutz.csv  ZTF18aaadhmx.csv  (+949 more)
src/: gpu.rs  gpu_metal.rs  lib.rs  main.rs
src/gpu/: cuda.rs  host_shared.rs  metal.rs  mod.rs
tests/: cuda_kernel_layout.rs  metal_kernel_layout.rs  synthetic_lightcurves.rs
