[package]
name = "villar-pso"
version = "0.1.0"
edition = "2021"
description = "Joint two-band Villar light-curve fitter using PSO — matches JAX fit_jax_best.py"
default-run = "villar-pso"

[lib]
name = "villar_pso"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]
cuda = ["cc"]

[dependencies]
csv = "1.3"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
rand = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }

[[bin]]
name = "gpu-batch"
path = "src/bin/gpu_batch.rs"
required-features = ["cuda"]

[[bin]]
name = "cpu-parallel-bench"
path = "src/bin/cpu_parallel_bench.rs"

[profile.release]
lto = "fat"
codegen-units = 1
