[package]
name = "villar-pso"
version = "0.1.0"
edition = "2021"
description = "Joint two-band Villar light-curve fitter using PSO"

[lib]
name = "villar_pso"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]
cuda = ["cc"]

[dependencies]
csv = "1.3"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
rand = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }

[[bin]]
name = "cpu-dispatch-bench"
path = "src/bin/cpu_dispatch_bench.rs"

[[bin]]
name = "gpu-scaling-bench"
path = "src/bin/gpu_scaling_bench.rs"
required-features = ["cuda"]

[profile.release]
lto = "fat"
codegen-units = 1
