[package]
name = "villar-pso"
version = "0.1.0"
edition = "2021"
description = "Joint two-band Villar light-curve fitter using PSO"

[lib]
name = "villar_pso"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]
cuda = ["cc"]
# Apple Silicon GPU backend (M1–M5). Pulls in the `metal` crate, which is
# macOS-only — building this feature on Linux/Windows will fail by design.
metal = ["dep:metal"]

[dependencies]
csv = "1.3"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
rand = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

# Gate the `metal` crate behind cfg(target_os = "macos") so non-macOS builds
# don't even try to resolve it.
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }

[[bin]]
name = "cpu-dispatch-bench"
path = "src/bin/cpu_dispatch_bench.rs"

[[bin]]
name = "gpu-scaling-bench"
path = "src/bin/gpu_scaling_bench.rs"
required-features = ["cuda"]

[[bin]]
name = "gpu-batch1000-bench"
path = "src/bin/gpu_batch1000_bench.rs"
required-features = ["cuda"]

[[bin]]
name = "metal-batch1000-bench"
path = "src/bin/metal_batch1000_bench.rs"
required-features = ["metal"]

[profile.release]
lto = "fat"
codegen-units = 1
